# km8

./: .gitignore  CMakeLists.txt  README.md  assembler.c  assembler.h  bus.c  bus.h  cartridge.h  cli.c  cli.h  console.c  console.h  core.c  cpu.c  cpu.h  emulator.c  emulator.h  kasm.c  kasm.h  lexer.c  lexer.h  list.c  list.h  main.c  mcu.h  opcodes.c  opcodes.h  parser.c  parser.h  platform.c  platform.h  ram.c  ram.h  rom.c  rom.h  tokenizer.c  tokenizer.h
.VSCodeCounter/2025-10-27_23-20-19/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
cmake/: km8Config.cmake.in
emulator/: CMakeLists.txt  main.c
emulator/platform/: platform.h  platform_linux.c  platform_stub.c  platform_win32.c
include/km8/: cartridge.h  cpu.h  km8.h
internal/: bus.h  cpu.h  cpu_internal.h  km8_internal.h
roms/: inc_loop.kasm
roms/increment_loop/: inc_func.kasm  inc_loop.json  inc_loop.kasm
src/: core.c
src/bus/: bus.c  dispatch.c
src/cartridge/: cartridge.c  ram.c  rom.c
src/cartridge/rom/: rom.c
src/cpu/: alu.c  cpu.c  opcodes.c
src/mem/: bios.c  wram.c
tools/kasm/: Assembler.cs  AssemblerContext.cs  Extensions.cs  InstructionSet.cs  KasmProject.cs  Program.cs  kasm.csproj
tools/kasm/Exceptions/: KasmInternalException.cs  KasmOperandException.cs  KasmSyntaxException.cs  KasmUnresolvedValueException.cs
tools/kasm/Parser/: Parser.cs
tools/kasm/Parsing/: Parser.cs  Statement.cs  StatementBuilder.cs  StatementSequence.cs  StatementSequenceBuilder.cs
tools/kasm/Parsing/Exceptions/: KasmSyntaxException.cs
tools/kasm/Resolving/: IAssemblerDirectiveHandler.cs  MachineDirective.cs  MachineDirectiveBuilder.cs  MachineDirectiveSequence.cs  Resolver.cs
tools/kasm/Resolving/AssemblerDirectives/: DefineDirectiveHandler.cs
tools/kasm/Symbols/: Symbol.cs  SymbolTable.cs
tools/kasm/Tokenization/: ITokenHandler.cs  ITokenType.cs  Token.cs  TokenSequence.cs  TokenSequenceBuilder.cs  Tokenizer.cs
tools/kasm/Tokenization/TokenTypes/: AddressLiteralToken.cs  AddressLiteralTokenHandler.cs  DirectiveToken.cs  DirectiveTokenHandler.cs  EOFToken.cs  IdentifierToken.cs  InstructionToken.cs  IntegerLiteralToken.cs  LabelToken.cs  NewLineToken.cs  RegisterToken.cs
tools/kasm/ValueTypes/: AddressValue.cs  IKasmValue.cs  ImmediateValue.cs  RegisterValue.cs
tools/kasm/instruction_sets/: km8-isa-v1.json
